--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "repository": "https://github.com/LambdaSchool/webdb-i-guided",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.20.8",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
